dev/tests/cases/neg/06_decl_float_int.tv
df main() -> void {
    set f: f64 = 5;
}
